[project]
name = "macros-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.13",
    "openai>=1.88.0",
    "psycopg2>=2.9.10",
    "ruff>=0.12.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]

[tool.ruff.lint]
select = [
    "E",  # ошибки оформления (pep8)
    "W",  # предупреждения
    "F",  # ошибки (flake8/pyflakes)
    "I",  # импорты (isort)
    "D",  # докстринги
    "N",  # pep8 naming
    "UP", # устаревшие конструкции
    "COM", # запятые
]

ignore = [
    "D100", # отключим требование докстринга у модуля
    "D104", # отключим требование докстринга у пакета
]